--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ dependencies = [
     "langchain-anthropic>=1.3.1",
     "langchain-core>=1.2.7",
     "langgraph>=1.0.6",
+    "mcp>=1.0.0",
     "python-dotenv>=1.2.1",
 ]
